deployment/gin_api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ginapi-service
spec:
  selector:
    app: ginapi
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: ClusterIP
