deployment/gin_api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ginapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: "ginapi-group"
spec:
  rules:
    - host: ginapi.kotakcherry.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ginapi-service  # The name of your service
                port:
                  number: 8082
